--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/rebekkanordheim/joker#readme",
   "devDependencies": {
+    "eslint": "^8.52.0",
     "prettier": "^3.0.3"
   },
   "dependencies": {
