--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "node src/js/joker.test.js",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint src/**/*.js --cache --fix"
+    "lint-fix": "eslint src/**/*.js --cache --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,18 @@
   "homepage": "https://github.com/rebekkanordheim/joker#readme",
   "devDependencies": {
     "eslint": "^8.52.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3"
   },
   "dependencies": {
     "example-joker": "^0.0.4",
     "give-me-a-joke": "^0.4.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
